LPD-49422 buildREST
